fix z-index for logo https://trello.com/c/EqVOfLJv/98-responsive-ui-header

--- a/public/css/_navbar.scss
+++ b/public/css/_navbar.scss
@@ -110,6 +110,9 @@ $dropDown: false;
 }*/
 
 .navbar-logo {
+  position: relative;
+  z-index: ($zindex-navbar-fixed + 1);
+
   @media (min-width: $screen-sm-min) {
     float: left;
   }
@@ -131,7 +134,7 @@ $dropDown: false;
 .navbar-nav .navbar-logged-user {
   @media (min-width: $screen-sm-min) {
     position: absolute;
-    top: 0;
+    top: -10px;
     right: 0;
     font-size: 90%;
   }
